# task-manager

./: .env.example  .env.test  Dockerfile  README.md  docker-compose.yml  load_test.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3b462055396b_add_outbox.py  b20506f587ea_initial_tasks.py
app/: main.py
app/api/v1/: router.py  tasks.py
app/core/: config.py  enums.py
app/db/: session.py
app/db/models/: outbox.py  task.py
app/messaging/: rabbitmq.py
app/repositories/: outbox_repo.py  task_repo.py
app/schemas/: tasks.py
app/services/: publisher.py  task_service.py
app/utils/: exceptions.py  pagination.py
app/workers/: consumer.py  outbox_publisher.py  outbox_run.py  run.py
documents/: Архитектура БД.xlsx  Схема.vsdx
tests/integration/: conftest.py  test_tasks_api.py
tests/unit/: conftest.py  test_task_service_publish.py  test_worker_consumer.py
